<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.CSC481Project.ashley.quickmentiontest.SignUp">


    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_margin="15dp"
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="123dp"
            app:srcCompat="@drawable/quick_mention_logo"
            tools:layout_editor_absoluteY="-124dp"
            tools:layout_editor_absoluteX="28dp"
            android:contentDescription="@string/content_description" />

        <EditText
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginLeft="18dp"
            android:text="@string/character_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginStart="18dp" />

        <Button
            android:layout_margin="15dp"
            android:text="@string/sign_up_button"
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textAlignment="center"
            android:text="@string/link_to_login"
            android:id="@+id/textViewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
